--- a/june/03.md
+++ b/june/03.md
@@ -1,7 +1,14 @@
 # 03/06/2022 - Départ pour prague
 ## Avion
-Enfin le depart ! J'écrit actuellement depuis l'avions, qui ne tardera pas a partir (6h20)  
-Il n'y a pas reu de probleme lors de l'embarquement, j'attend maintenant avec impatience l'arrivé dans un nouveau pays  
+Enfin le départ ! J'écrit actuellement depuis l'avions, qui ne tardera pas a partir (6h20)  
+Il n'y a pas eu de problème lors de l'embarquement, j'attend maintenant avec impatience l'arrivé dans un nouveau pays  
 Je ne suis pas aussi content de partir que l'on pourrai croire, j'ai concience des nombreuses difficultés au quel je vais devoir faire face, notamement la barrière de la langue (Vive l'anglais, 8 au bac ça veut tout dire)
 En espérant arriver en vie ☻ j'ecrirai une suite ce soir ^^  
 Et évidement, papa et maman vous allez me manquer mais tout va bien se passer 
+
+## Americka 36 - l'appartement
+Ouf toujours en vie! Nous avons débarqué vers 8h a l'aeroport de Prague, pour ensuite prendre le bus, puis le metro, avec nos 80 kilos d'affaires (me suis fais avoir, répartition 66/33)
+Après un petit dèj à la pizza, nous nous somme possé devant l'église et attendu l'heure de la recontre avec la logeuse  
+Nous sommes alors partie visité Prague (FAUX! objectif retirer de l'argent, faire les cours de premiere nécéssité et effectuer un reperage de notre lieu de travail)  
+Après quelque douleur au pied et fatigue musculaire intense (6h de marche !) nous nous somme enfin posé à l'apartement (gros dodo)  
+Actuellement, nous n'allons pas tarder à aller manger, bonne soirée !  
