--- a/daily by hugo/june/03.md
+++ b/daily by hugo/june/03.md
@@ -3,7 +3,7 @@
 Enfin le départ ! J'écrit actuellement depuis l'avions, qui ne tardera pas a partir (6h20)  
 Il n'y a pas eu de problème lors de l'embarquement, j'attend maintenant avec impatience l'arrivé dans un nouveau pays  
 Je ne suis pas aussi content de partir que l'on pourrai croire, j'ai concience des nombreuses difficultés au quel je vais devoir faire face, notamement la barrière de la langue (Vive l'anglais, 8 au bac ça veut tout dire)  
-<img src="./images/avion.jpg" alt="depuis l'avion" width="320">  
+<img src="../../images/avion.jpg" alt="depuis l'avion" width="320">  
 En espérant arriver en vie ☻ j'ecrirai une suite ce soir ^^  
 Et évidement, papa et maman vous allez me manquer mais tout va bien se passer 
 
@@ -11,7 +11,7 @@ Et évidement, papa et maman vous allez me manquer mais tout va bien se passer
 Ouf toujours en vie! Nous avons débarqué vers 8h a l'aeroport de Prague, pour ensuite prendre le bus, puis le metro, avec nos 80 kilos d'affaires (me suis fais avoir, répartition 66/33)
 Après un petit dèj à la pizza, nous nous somme possé devant l'église et attendu l'heure de la recontre avec la logeuse  
 Nous sommes alors partie visité Prague (FAUX! objectif retirer de l'argent, faire les cours de premiere nécéssité et effectuer un reperage de notre lieu de travail)  
-<img src="./images/fete.jpg" alt="une fete de rue" width="320">  
+<img src="../../images/fete.jpg" alt="une fete de rue" width="320">  
 Après quelque douleur au pied et fatigue musculaire intense (6h de marche !) nous nous somme enfin posé à l'apartement (gros dodo)  
-<img src="./images/chambre.jpg" alt="la chambre" width="320">  
+<img src="../../images/chambre.jpg" alt="la chambre" width="320">  
 Actuellement, nous n'allons pas tarder à aller manger, bonne soirée !  
