add return button

--- a/daily by hugo/june/03.md
+++ b/daily by hugo/june/03.md
@@ -15,3 +15,5 @@ Nous sommes alors partie visité Prague (FAUX! objectif retirer de l'argent, fai
 Après quelque douleur au pied et fatigue musculaire intense (6h de marche !) nous nous somme enfin posé à l'apartement (gros dodo)  
 <img src="../../images/chambre.jpg" alt="la chambre" width="320">  
 Actuellement, nous n'allons pas tarder à aller manger, bonne soirée !  
+  
+[return](../README.md)
