--- a/daily by hugo/june/04.md
+++ b/daily by hugo/june/04.md
@@ -4,3 +4,5 @@ My day begin with hard stand up, because my bed is soooooo confortable. First ta
 <img src="../../images/place_du_musee.jpg" alt="grand rue avec un musée au fond" width="320">  
 The tiedless catch us and we return to the appartment to sleep or just bbe sit. A good small day i think ! 
 Oh, one more before end of writing: Wee know actually all pepole of collocation !!! We are 6, 2 girl and 4 boy, 3 french, 1 belgium, 1 german and 1 ireland. So, it's cool !
+
+[return](../README.md)
