--- a/daily by hugo/june/03.md
+++ b/daily by hugo/june/03.md
@@ -1,18 +1,18 @@
 # 03/06/2022 - Départ pour prague
 ## Avion
-Enfin le départ ! J'écrit actuellement depuis l'avions, qui ne tardera pas a partir (6h20)  
-Il n'y a pas eu de problème lors de l'embarquement, j'attend maintenant avec impatience l'arrivé dans un nouveau pays  
-Je ne suis pas aussi content de partir que l'on pourrai croire, j'ai concience des nombreuses difficultés au quel je vais devoir faire face, notamement la barrière de la langue (Vive l'anglais, 8 au bac ça veut tout dire)  
+Enfin le départ ! J'écris actuellement depuis l'avions, qui ne tardera pas a partir (6h20)  
+Il n'y a pas eu de problème lors de l'embarquement, j'attends maintenant avec impatience l'arrivée dans un nouveau pays  
+Je ne suis pas aussi content de partir que l'on pourrait croire, j'ai conscience des nombreuses difficultés auquel je vais devoir faire face, notamment la barrière de la langue (Vive l'anglais, 8 au bac ça veut tout dire)  
 <img src="../../images/avion.jpg" alt="depuis l'avion" width="320">  
 En espérant arriver en vie ☻ j'ecrirai une suite ce soir ^^  
-Et évidement, papa et maman vous allez me manquer mais tout va bien se passer 
+Et évidemment, papa et maman vous allez me manquer mais tout va bien se passer 
 
 ## Americka 36 - l'appartement
-Ouf toujours en vie! Nous avons débarqué vers 8h a l'aeroport de Prague, pour ensuite prendre le bus, puis le metro, avec nos 80 kilos d'affaires (me suis fais avoir, répartition 66/33)
-Après un petit dèj à la pizza, nous nous somme possé devant l'église et attendu l'heure de la recontre avec la logeuse  
-Nous sommes alors partie visité Prague (FAUX! objectif retirer de l'argent, faire les cours de premiere nécéssité et effectuer un reperage de notre lieu de travail)  
+Ouf toujours en vie! Nous avons débarqué vers 8h a l'aéroport de Prague, pour ensuite prendre le bus, puis le métro, avec nos 80 kilos d'affaires (me suis faits avoir, répartition 66/33)
+Après un petit dèj à la pizza, nous nous sommes posé devant l'église et attendu l'heure de la rencontre avec la logeuse  
+Nous sommes alors partie visiter Prague (FAUX! objectif retirer de l'argent, faire les cours de première nécessité et effectuer un repérage de notre lieu de travail)  
 <img src="../../images/fete.jpg" alt="une fete de rue" width="320">  
-Après quelque douleur au pied et fatigue musculaire intense (6h de marche !) nous nous somme enfin posé à l'apartement (gros dodo)  
+Après quelques douleurs au pied et fatigue musculaire intense (6h de marche !) nous nous sommes enfin posé à l'appartement (gros dodo)  
 <img src="../../images/chambre.jpg" alt="la chambre" width="320">  
 Actuellement, nous n'allons pas tarder à aller manger, bonne soirée !  
   
