--- a/daily by hugo/june/06.md
+++ b/daily by hugo/june/06.md
@@ -22,4 +22,6 @@ So, we have 4 personnals missions :
 
 So, good and big day, we return at the appartment with our foots and we drink soft drink  
 On that conclusion, good night and see you tomorrow for a new adventure !  
-ps: don't panic, some picture arrive, but is more difficult because I have the laziness to connect my phone to my pc
+ps: don't panic, some picture arrive, but is more difficult because I have the laziness to connect my phone to my pc  
+
+[return](../README.md)
