--- a/daily by hugo/june/06.md
+++ b/daily by hugo/june/06.md
@@ -2,6 +2,7 @@
 Okay stop don't panic, sunday is a sleepy day so nothing to write (or juste Zzzzz)  
 I will talk about today, the First day in the thales office  
 To begin the day, I walk something like 50min because i like this  
+<img src="../../images/walk_to_thales.jpg" alt="walk in parc to go in thales" width="320">  
 And when i arrived, victoria arrived too  
 So we enter in the office, and i can begin a strange story (or not)  
 First step, go to the reception and take badges to have the permission to go where we want  
