--- a/daily by hugo/june/07.md
+++ b/daily by hugo/june/07.md
@@ -3,11 +3,13 @@ Today is not a color day because.. read title
 This day, like other, begin with hard wake up at 6 o'clock (why it's a bit early? because i want to do some sportive exploite lol)  
 After short time under water for me (shower) we have right to a second time under water, when we want to go to thales  
 No problem, we have the subway !  
-
+<img src="../../images/metro_boulot_dodo.jpg" alt="to do down in the subway" width="320">  
 When arrive to thales, we doing 3 things:  
 - Send an email to a banker (and it's work, we have an appoitement)
 - Meeting with Petr, our "security responsable:
-- Do us certification of fire and safty (What doing when.. )
+- Do us certification of fire and safty (What doing when.. )  
+
+<img src="../../images/my_desk.jpg" alt="so it's my desk, one laptop, one screen, one keyboard and mouse XD" width="320">  
 
 For the meat, i eat in the rosted bidule truc with four other personn:  
 - Victoria, you know here
