--- a/daily by hugo/june/10.md
+++ b/daily by hugo/june/10.md
@@ -25,3 +25,5 @@ At the end of the day, we decided to get a party, and it was very cool; I speak 
 Yes, i am tied, but it's my better life XD  
 For today's writing, wait tonight, but don't blame me if nothing apppaers, a party is arranged  
 Wonderful day for you, here it's a big 26 degres blue sky !   
+
+ps: Some pictures arrive, be patient
