--- a/daily by hugo/june/10.md
+++ b/daily by hugo/june/10.md
@@ -20,7 +20,7 @@ Oh, yeh, you want a lexicon:
 - [resolv.conf](https://en.wikipedia.org/wiki/Resolv.conf) is the file configuration for the DNS ->
 - [DNS (Domaine Name System)](https://en.wikipedia.org/wiki/Domain_Name_System) is like.. yes your mother, but yet today: "Where is that ressources?" (ressources can be your underwear) "Here" or "Ask the next dns, I don't know"   
 
-If you have a complaint, contact me at norepley@iamarobot.com  
+If you have a complaint, contact me at noreply@iamarobot.com  
 
 At the end of the day, we decided to get a party, and it was very cool; I speak a lot with other student (thank beer) and we went to the metronom place to dance. When we return to the appartment, we see NBA final at 3am to 5~6am  
 Yes, i am tied, but it's my better life XD  
